# zipline

./: .pre-commit-config.yaml  .travis.yml  environment.yml  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py  versioneer.py
docs/: deploy.py
docs/source/: conf.py
etc/: conda_build_matrix.py  dev-install  gen_type_stubs.py
scripts/: generate_pip_deps_from_conda.py
tests/: test_algorithm.py  test_api_shim.py  test_assets.py  test_bar_data.py  test_benchmark.py  test_blotter.py  test_clock.py  test_cmdline.py  test_continuous_futures.py  test_data_portal.py  test_examples.py  test_execution_styles.py  test_fetcher.py  test_finance.py  test_history.py  test_labelarray.py  test_memoize.py  test_ordering.py  test_registration_manager.py  test_restrictions.py  test_security_list.py  test_testing.py  test_tradesimulation.py
tests/data/: test_adjustments.py  test_daily_bars.py  test_dispatch_bar_reader.py  test_fx.py  test_minute_bars.py  test_resample.py
tests/events/: test_events.py  test_events_cme.py  test_events_nyse.py
tests/finance/: test_cancel_policy.py  test_commissions.py  test_risk.py  test_slippage.py  test_transaction.py
tests/history/: generate_csvs.py
tests/metrics/: test_core.py  test_metrics.py
tests/pipeline/: base.py  test_adjusted_array.py  test_adjustment.py  test_alias.py  test_blaze.py  test_classifier.py  test_column.py  test_computable_term.py  test_dataset.py  test_domain.py  test_downsampling.py  test_dtypes.py  test_engine.py  test_events.py  test_factor.py  test_filter.py  test_frameload.py  test_hooks.py  test_international_markets.py  test_multidimensional_dataset.py  test_numerical_expression.py  test_pipeline.py  test_pipeline_algo.py  test_quarters_estimates.py  test_slice.py  test_statistical.py  test_technical.py  test_term.py  test_us_equity_pricing_loader.py
tests/resources/: rebuild_example_data
tests/utils/: daily_bar_writer.py  test_argcheck.py  test_cache.py  test_date_utils.py  test_final.py  test_math_utils.py  test_metautils.py  test_numpy_utils.py  test_pandas_utils.py  test_preprocess.py  test_sentinel.py
zipline/: __main__.py  _protocol.pyx  _version.py  algorithm.py  api.py  api.pyi  country.py  currency.py  errors.py  extensions.py  protocol.py  test_algorithms.py
zipline/assets/: __init__.py  _assets.pxd  _assets.pyx  asset_db_migrations.py  asset_db_schema.py  asset_writer.py  assets.py  continuous_futures.pyx  exchange_info.py  roll_finder.py
zipline/data/: __init__.py  _adjustments.pyx  _equities.pyx  _minute_bar_internal.pyx  _resample.pyx  adjustments.py  bar_reader.py  bcolz_daily_bars.py  benchmarks.py  continuous_future_reader.py  data_portal.py  dispatch_bar_reader.py  hdf5_daily_bars.py  history_loader.py  in_memory_daily_bars.py  minute_bars.py  resample.py  session_bars.py
zipline/examples/: __init__.py  dual_ema_talib.py  dual_moving_average.py  olmar.py
zipline/finance/: _finance_ext.pyx  asset_restrictions.py  cancel_policy.py  commission.py  controls.py  execution.py  ledger.py  order.py  position.py  shared.py  slippage.py  trading.py  transaction.py
zipline/gens/: sim_engine.pyx  tradesimulation.py  utils.py
zipline/lib/: _factorize.pyx  _float64window.pyx  adjusted_array.py  adjustment.pyx  labelarray.py  rank.pyx
zipline/pipeline/: __init__.py  domain.py  downsample_helpers.py  engine.py  expression.py  graph.py  mixins.py  pipeline.py  sentinels.py  term.py  visualize.py
zipline/sources/: benchmark_source.py  requests_csv.py  test_source.py
zipline/testing/: __init__.py  core.py  debug.py  fixtures.py  pipeline_terms.py  predicates.py  slippage.py
zipline/utils/: api_support.py  argcheck.py  cache.py  calendars.py  classproperty.py  cli.py  compat.py  context_tricks.py  data.py  deprecate.py  dummy.py  events.py  exploding_object.py  factory.py  final.py  functional.py  idbox.py  input_validation.py  memoize.py  metautils.py  (+11 more)
(+53 files in other folders)
