[build-system]
requires = [
    "setuptools", 
    "wheel",
    "python_version==3.6",
    "cython==0.29.21",
    "numpy"
]
build_backend = "setuptools.build_meta"

[tool.black]
target-version = ['py36']
exclude = '''
(
    asv_bench/env
  | \.egg
  | \.git
  | \.hg
  | \.mypy_cache
  | \.nox
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | setup.py
)
'''
