[options]
packages = find:
include_package_data = True

[options.packages.find]
include = zipline, zipline.*

[options.extras_require]
talib = TA-Lib>=0.4.9
test = 
    coverage>=4.0.3
    nose>=1.3.7
    parameterized
    nose-ignore-docstring>=0.2
    nose-timer>=0.5.0
    mock>=2.0.0
    testfixtures>=4.1.2
    responses>=0.9.0

[options.entry_points]
console_scripts = 
    zipline = zipline.__main__:main

[nosetests]
verbosity=2
with-ignore-docstrings=1
with-timer=1
timer-top-n=15
cover-package=zipline
with-doctest=1
testmatch=(?:^|[\\b_\\.-])[Tt]est(?!ing)
logging-level=INFO

[metadata]
description-file = README.rst
license_file = LICENSE

[versioneer]
VCS=git
style=pep440
versionfile_source=zipline/_version.py
versionfile_build=zipline/_version.py
tag_prefix=
parentdir_prefix= zipline-

[flake8]
exclude =
    versioneer.py
